json-generation/objectsParser.py
# Generated from objects.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class objectsParser ( Parser ):

    grammarFileName = "objects.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'['", "']'", "'('", "')'", "','", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LBRA", "RBRA", "LPAR", 
                      "RPAR", "COMMA", "COLUMN", "COMMENT", "FILE_NAME", 
                      "ID", "WS", "STRING", "INTEGER", "FLOAT" ]

    RULE_body = 0
    RULE_objecttype = 1
    RULE_supertype = 2
    RULE_attribute = 3
    RULE_value = 4

    ruleNames =  [ "body", "objecttype", "supertype", "attribute", "value" ]

    EOF = Token.EOF
    T__0=1
    LBRA=2
    RBRA=3
    LPAR=4
    RPAR=5
    COMMA=6
    COLUMN=7
    COMMENT=8
    FILE_NAME=9
    ID=10
    WS=11
    STRING=12
    INTEGER=13
    FLOAT=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objecttype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(objectsParser.ObjecttypeContext)
            else:
                return self.getTypedRuleContext(objectsParser.ObjecttypeContext,i)


        def getRuleIndex(self):
            return objectsParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = objectsParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 10
                self.objecttype()
                self.state = 15
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjecttypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(objectsParser.LPAR)
            else:
                return self.getToken(objectsParser.LPAR, i)

        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(objectsParser.RPAR)
            else:
                return self.getToken(objectsParser.RPAR, i)

        def ID(self):
            return self.getToken(objectsParser.ID, 0)

        def LBRA(self):
            return self.getToken(objectsParser.LBRA, 0)

        def FILE_NAME(self):
            return self.getToken(objectsParser.FILE_NAME, 0)

        def RBRA(self):
            return self.getToken(objectsParser.RBRA, 0)

        def supertype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(objectsParser.SupertypeContext)
            else:
                return self.getTypedRuleContext(objectsParser.SupertypeContext,i)


        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(objectsParser.AttributeContext)
            else:
                return self.getTypedRuleContext(objectsParser.AttributeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(objectsParser.COMMA)
            else:
                return self.getToken(objectsParser.COMMA, i)

        def getRuleIndex(self):
            return objectsParser.RULE_objecttype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjecttype" ):
                listener.enterObjecttype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjecttype" ):
                listener.exitObjecttype(self)




    def objecttype(self):

        localctx = objectsParser.ObjecttypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_objecttype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            localctx.name = self.match(objectsParser.ID)
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 17
                self.match(objectsParser.LBRA)
                self.state = 18
                self.match(objectsParser.FILE_NAME)
                self.state = 19
                self.match(objectsParser.RBRA)


            self.state = 22
            self.match(objectsParser.LPAR)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 23
                self.supertype()
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 24
                    self.match(objectsParser.COMMA)
                    self.state = 25
                    self.supertype()
                    self.state = 30
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 33
            self.match(objectsParser.RPAR)
            self.state = 34
            self.match(objectsParser.LPAR)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 35
                self.attribute()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 36
                    self.match(objectsParser.COMMA)
                    self.state = 37
                    self.attribute()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 45
            self.match(objectsParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SupertypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(objectsParser.ID, 0)

        def getRuleIndex(self):
            return objectsParser.RULE_supertype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSupertype" ):
                listener.enterSupertype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSupertype" ):
                listener.exitSupertype(self)




    def supertype(self):

        localctx = objectsParser.SupertypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_supertype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            localctx.name = self.match(objectsParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.type_ = None # Token

        def COLUMN(self):
            return self.getToken(objectsParser.COLUMN, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(objectsParser.ID)
            else:
                return self.getToken(objectsParser.ID, i)

        def value(self):
            return self.getTypedRuleContext(objectsParser.ValueContext,0)


        def getRuleIndex(self):
            return objectsParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = objectsParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            localctx.name = self.match(objectsParser.ID)
            self.state = 50
            self.match(objectsParser.COLUMN)
            self.state = 51
            localctx.type_ = self.match(objectsParser.ID)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 52
                self.match(objectsParser.T__0)
                self.state = 53
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(objectsParser.STRING, 0)

        def INTEGER(self):
            return self.getToken(objectsParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(objectsParser.FLOAT, 0)

        def getRuleIndex(self):
            return objectsParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = objectsParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 28672) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





